@@ -1,4 +1,5 @@
 next
+- in CMake we use target_compile_features() to set compiler related language standard options, for now we rely on C++17 (#98)
 - now syslog::facility class is declared constexpr, no more facility maps or factory method (#97)
 - replace #define with constexpr (#86)
 - use std::atomic wherever possible (#96)
